Search API 1.26 (2022-10-05):
-----------------------------
- #3306204 by mkalkbrenner, drunken monkey: Added a new query option for
  passing non-standard language filters to the backends.
- #3262092 by attilatilman, japerry, drunken monkey, Berdir: Fixed several
  problems regarding Drupal 10 compatibility.
- #3292775 by Berdir, drunken monkey: Fixed most deprecations preventing Drupal
  10 compatibility.
- #3257550 by drunken monkey, lpeidro: Fixed wrong handling of empty values in
  the HTML filter.
- #3029582 by drunken monkey, RichardDavies: Fixed handling of Views contextual
  filters in combination with filter groups.
- #3247840 by drunken monkey: Added a hidden datasource option to disable the
  direct SQL query "fast path" for initial entity tracking.

Search API 1.25 (2022-07-18):
-----------------------------
- #3296006 by mkalkbrenner, borisson_, drunken monkey: Fixed Views caching for
  failed searches.
- #3295564 by mkalkbrenner, drunken monkey, borisson_: Fixed broken Views
  caching with Facets 2.0.4.

Search API 1.24 (2022-07-07):
-----------------------------
- #3292241 by drunken monkey: Fixed test fails.
- #3243313 by Steven Jones, drunken monkey: Removed the "search_api_base_path"
  query option for views.
- #3179643 by drunken monkey: Fixed Views field extraction bevahior when fields
  returned from server don't have values.
- #3253986 by drunken monkey, gaddman: Fixed empty "ignore characters" setting
  for the Tokenizer processor.
- #3197050 by BAHbKA, drunken monkey: Fixed caching issue for facets on AJAX
  views.
- #3246615 by drunken monkey: Fixed error when saving an unindexed translation
  of an entity.
- #3258375 by Eugene Bocharov, wells, drunken monkey, joshuami, MrDaleSmith,
  Grayle: Fixed out-of-memory error when used with Views, Metatag and caching.
- #3270324 by drunken monkey, kimberleycgm: Fixed incorrect storing of
  "Rendered item" processor setting "roles".