@@ -2,7 +2,7 @@ _core:
   default_config_hash: Cq0qEqvsPlEVfrCpF0VRzK4MFQhRHzqncneoTEKHXUc
 langcode: de
 delete_newer: false
-node_revision_delete_cron: 1000
+node_revision_delete_cron: 200
 node_revision_delete_time: 0
 node_revision_delete_minimum_age_to_delete_time:
   max_number: 12
