@@ -95,4 +95,6 @@ details .messages {
 .search-api-checkboxes-list .form-checkboxes {
   max-height: 30em;
   overflow: auto;
+  margin-left: -1rem;
+  padding-left: 1rem;
 }
