@@ -6,7 +6,7 @@ core_version_requirement: ^9.2 || ^10.0
 dependencies:
   - search_api:search_api
 
-# Information added by Drupal.org packaging script on 2022-10-05
-version: '8.x-1.26'
+# Information added by Drupal.org packaging script on 2022-10-19
+version: '8.x-1.27'
 project: 'search_api'
-datestamp: 1664974914
+datestamp: 1666181444
