@@ -7,7 +7,7 @@ lifecycle: stable
 configure: search_api.overview
 php: 7.4
 
-# Information added by Drupal.org packaging script on 2022-10-05
-version: '8.x-1.26'
+# Information added by Drupal.org packaging script on 2022-10-19
+version: '8.x-1.27'
 project: 'search_api'
-datestamp: 1664974914
+datestamp: 1666181444
