@@ -2,6 +2,9 @@
 
 namespace Drupal\search_api\Plugin\search_api\display;
 
+use Drupal\Core\Theme\ThemeManagerInterface;
+use Symfony\Component\DependencyInjection\ContainerInterface;
+
 /**
  * Represents a Views block display.
  *
@@ -14,6 +17,45 @@ namespace Drupal\search_api\Plugin\search_api\display;
 class ViewsBlock extends ViewsDisplayBase {
 
   /**
+   * The theme manager.
+   *
+   * @var \Drupal\Core\Theme\ThemeManagerInterface|null
+   */
+  protected ?ThemeManagerInterface $themeManager;
+
+  /**
+   * @inheritDoc
+   */
+  public static function create(ContainerInterface $container, array $configuration, $plugin_id, $plugin_definition) {
+    $plugin = parent::create($container, $configuration, $plugin_id, $plugin_definition);
+    $plugin->setThemeManager($container->get('theme.manager'));
+    return $plugin;
+  }
+
+  /**
+   * Retrieves the theme manager.
+   *
+   * @return \Drupal\Core\Theme\ThemeManagerInterface
+   *   The theme manager.
+   */
+  public function getThemeManager(): ThemeManagerInterface {
+    return $this->themeManager ?: \Drupal::service('theme.manager');
+  }
+
+  /**
+   * Sets the theme manager.
+   *
+   * @param \Drupal\Core\Theme\ThemeManagerInterface $theme_manager
+   *   The new theme manager.
+   *
+   * @return $this
+   */
+  public function setThemeManager(ThemeManagerInterface $theme_manager): self {
+    $this->themeManager = $theme_manager;
+    return $this;
+  }
+
+  /**
    * {@inheritdoc}
    */
   public function isRenderedInCurrentRequest() {
@@ -22,7 +64,11 @@ class ViewsBlock extends ViewsDisplayBase {
     $plugin_id = 'views_block:' . $this->pluginDefinition['view_id'] . '-' . $this->pluginDefinition['view_display'];
     $blocks = $this->getEntityTypeManager()
       ->getStorage('block')
-      ->loadByProperties(['plugin' => $plugin_id]);
+      ->loadByProperties([
+        'plugin' => $plugin_id,
+        'theme' => $this->getThemeManager()->getActiveTheme()->getName(),
+      ]);
+    /** @var \Drupal\block\BlockInterface $block */
     foreach ($blocks as $block) {
       if ($block->access('view')) {
         return TRUE;
