@@ -1,3 +1,8 @@
+Search API 1.x, dev (xxxx-xx-xx):
+---------------------------------
+- #3311987 by tyler36, Arun Velusamy, sophiavs, drunken monkey: Fixed styling
+  of checked checkboxes in Claro.
+
 Search API 1.26 (2022-10-05):
 -----------------------------
 - #3306204 by mkalkbrenner, drunken monkey: Added a new query option for
